spacing fixes for summary box

--- a/packages/assets/css/src/scss/_components/_summary-box/_elements/_summary-box-body.scss
+++ b/packages/assets/css/src/scss/_components/_summary-box/_elements/_summary-box-body.scss
@@ -28,6 +28,13 @@
 					margin: 0;
 				}
 			}
+
+			@include element(body) {
+				@include media(max-width, lg) {
+					margin-left: 0;
+					margin-right: 0;
+				}
+			}
 		}
 	}
 
