--- a/packages/assets/css/src/scss/_components/_summary-box/_elements/_summary-box-list.scss
+++ b/packages/assets/css/src/scss/_components/_summary-box/_elements/_summary-box-list.scss
@@ -31,6 +31,8 @@
 				margin-bottom: $spacing-lg;
 				padding: $spacing-lg;
 				position: relative;
+				margin-right: 0;
+				margin-left: 0;
 
 				@include media(max-width, md) {
 					margin-bottom: $spacing-md;
